# gene-curator

./: .env  .env.example  .gitignore  404.html  CLAUDE.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PLAN.md  README.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  start-dev.sh  test-setup.sh  vue.config.js  webpack.config.js
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
backend/.mypy_cache/3.10/: __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  _locale.data.json  _locale.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  atexit.data.json  atexit.meta.json  bdb.data.json  bdb.meta.json  builtins.data.json  builtins.meta.json  cmd.data.json  cmd.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copyreg.data.json  copyreg.meta.json  (+74 more)
backend/.mypy_cache/3.10/_pytest/: _version.data.json  _version.meta.json  freeze_support.data.json  freeze_support.meta.json  stash.data.json  stash.meta.json
backend/.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json  wsgi.data.json  wsgi.meta.json
backend/.mypy_cache/3.10/attr/: _cmp.data.json  _cmp.meta.json  _typing_compat.data.json  _typing_compat.meta.json  _version_info.data.json  _version_info.meta.json  exceptions.data.json  exceptions.meta.json
backend/.mypy_cache/3.10/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
backend/.mypy_cache/3.10/ctypes/: __init__.data.json  __init__.meta.json  util.data.json  util.meta.json
backend/.mypy_cache/3.10/dns/: _asyncbackend.data.json  _asyncbackend.meta.json  enum.data.json  enum.meta.json  flags.data.json  serial.data.json  serial.meta.json  version.data.json  version.meta.json
backend/.mypy_cache/3.10/email/: __init__.data.json  __init__.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  feedparser.data.json  feedparser.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
backend/.mypy_cache/3.10/encodings/: __init__.data.json  __init__.meta.json
backend/.mypy_cache/3.10/h11/: _abnf.data.json  _abnf.meta.json  _receivebuffer.data.json  _receivebuffer.meta.json  _util.data.json  _util.meta.json  _version.data.json  _version.meta.json
backend/.mypy_cache/3.10/hpack/: huffman_constants.data.json  huffman_constants.meta.json
backend/.mypy_cache/3.10/html/: entities.data.json  entities.meta.json
backend/.mypy_cache/3.10/httpcore/: _exceptions.data.json  _exceptions.meta.json
backend/.mypy_cache/3.10/httpx/: __version__.data.json  __version__.meta.json  _status_codes.data.json  _status_codes.meta.json
backend/.mypy_cache/3.10/idna/: idnadata.data.json  idnadata.meta.json  package_data.data.json  package_data.meta.json
backend/.mypy_cache/3.10/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  util.data.json  util.meta.json
backend/.mypy_cache/3.10/markdown_it/: _punycode.data.json  _punycode.meta.json
backend/.mypy_cache/3.10/multiprocessing/: pool.data.json  pool.meta.json  process.data.json  process.meta.json  queues.data.json  queues.meta.json  shared_memory.data.json  shared_memory.meta.json  spawn.data.json  spawn.meta.json
backend/.mypy_cache/3.10/numpy/: _pytesttester.data.json  _pytesttester.meta.json  exceptions.data.json  exceptions.meta.json  version.data.json  version.meta.json
backend/.mypy_cache/3.10/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
backend/.mypy_cache/3.10/outcome/: _util.data.json  _util.meta.json  _version.data.json  _version.meta.json
backend/.mypy_cache/3.10/packaging/: __init__.data.json  __init__.meta.json  _structures.data.json  _structures.meta.json
backend/.mypy_cache/3.10/platformdirs/: version.data.json  version.meta.json
backend/.mypy_cache/3.10/pluggy/: _version.data.json  _version.meta.json  _warnings.data.json  _warnings.meta.json
backend/.mypy_cache/3.10/pygments/: formatter.data.json  formatter.meta.json  token.data.json  token.meta.json  unistring.data.json  unistring.meta.json  util.data.json  util.meta.json
backend/.mypy_cache/3.10/rich/: _cell_widths.data.json  _cell_widths.meta.json  _emoji_codes.data.json  _emoji_codes.meta.json  _export_format.data.json  _export_format.meta.json  _extension.data.json  _extension.meta.json  _loop.data.json  _loop.meta.json  _null_file.data.json  _null_file.meta.json  _pick.data.json  _pick.meta.json  _spinners.data.json  _spinners.meta.json  _stack.data.json  _stack.meta.json  color_triplet.data.json  color_triplet.meta.json  errors.data.json  errors.meta.json  filesize.data.json  filesize.meta.json  region.data.json  region.meta.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  schema_validator.py  security.py
backend/app/crud/: base.py  curation.py  gene.py  gene_assignment.py  gene_new.py  precuration.py  schema_repository.py  scope.py  user.py  workflow_engine.py
backend/app/models/: __init__.py  database_models.py  models.py  schema_agnostic_models.py
backend/app/schemas/: auth.py  curation.py  gene.py  gene_assignment.py  gene_complete.py  gene_new.py  precuration.py  schema_repository.py  scope.py  workflow_engine.py
backend/app/scoring/: __init__.py  base.py  clingen.py  gencc.py  qualitative.py  registry.py
backend/app/tests/: __init__.py
backend/scripts/: create_default_user.py  format.py  lint.py
(+937 files in other folders)
